# atlang

./: .gitignore  CMakeLists.txt  README.md
docs/: alang.doxygen  atlang.doxygen  notes.txt  todo.txt
src/: CMakeLists.txt  alang.c  atlang.c  chbuffer.c  codeblocks.c  codeblocks.h  common.h  compiler.c  compiler.h  configure.c  configure.h  disassembler.c  disassembler.h  errors.c  errors.h  expression.c  expression.h  files.c  files.h  hashtable.c  hashtable.h  log.c  log.h  memory.c  memory.h  object.c  object.h  ptrlist.c  ptrlist.h  scanner.c  scanner.h  u16list.c  u16list.h  vmachine.c  vmachine.h
utils/: cleanall  docs  setup  tests
